Added routes and validators, mongoose to follow
