# lab-3-todo-app/todo-api/app/server.js
@@ -10,6 +10,18 @@ express
   .use(cors)
   .use(pino)
   .use("/swagger", swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+  .get("/todo", require("./routes/get_todos"))
+  .post(
+    "/todo",
+    require("./validators/create_todo"),
+    require("./routes/create_todo")
+  )
+  .put(
+    "/todo/:id",
+    require("./validators/update_todo"),
+    require("./routes/update_todo")
+  )
+  .delete("/todo/:id", require("./routes/delete_todo"))
   .get("/health", require("./routes/health_check"))
   .use((req, res) => {
     res.status(404).json({ code: "404", message: "Not Found" });
